# hfss-mcp-server

./: .gitignore  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml  start_server.bat
config/: default_config.yaml
examples/: __init__.py  connect_2022.py  modeling_demo.py  patch_antenna.py  pcb_example.py
src/: __init__.py  __main__.py  hfss_connection.py  server.py
src/resources/: __init__.py  hfss_resources.py
src/tools/: __init__.py  antenna.py  geometry.py  material.py  pcb.py  project.py  results.py  script.py  setup.py
