[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hfss-mcp-server"
version = "0.1.0"
description = "MCP Server for Ansys HFSS - Antenna Design & PCB Simulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent" }]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    "pyaedt>=0.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
hfss-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
